--- a/src/compoenents/Home/Home.scss
+++ b/src/compoenents/Home/Home.scss
@@ -48,9 +48,9 @@
   height: 50vh;
 }
 
-.js {
-  margin-top: 130px;
-}
+// .js {
+//   margin-top: 130px;
+// }
 h1 {
   font-family: 'Noto Serif', serif;
 }
