--- a/src/compoenents/Home/Joinus/Joinus.scss
+++ b/src/compoenents/Home/Joinus/Joinus.scss
@@ -7,14 +7,14 @@
   //  border: 2px solid black;
   height: 65vh;
   h1 {
-    font-family: "Noto Serif", serif;
+    font-family: 'Noto Serif', serif;
     color: grey;
     font-size: 20px;
     font-weight: 700;
     margin-top: 1rem;
   }
   h2 {
-    font-family: "Noto Serif", serif;
+    font-family: 'Noto Serif', serif;
     margin-top: 0.3rem;
     font-size: 40px;
     font-weight: 100;
@@ -125,6 +125,10 @@
 @media (max-width: 500px) {
   .joinus {
     height: 140vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     // background-color: cyan;
     h2 {
       font-size: 20px;
