--- a/src/compoenents/Home/Joinus/Joinus.scss
+++ b/src/compoenents/Home/Joinus/Joinus.scss
@@ -122,47 +122,131 @@
     }
   }
 }
-// @media (max-width: 500px) {
-//   .joinus {
-//     height: 140vh;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     // background-color: cyan;
-//     h2 {
-//       font-size: 20px;
-//       margin-top: 0rem;
-//     }
-//     justify-content: space-evenly;
-//     .jscards {
-//       height: 250vh;
-//       .jscc {
-//         flex-direction: column;
-//         height: 100%;
-//         justify-content: space-evenly;
-//         // background-color: aqua;
-//         .imgholder1 {
-//           width: 80%;
-//           height: 20%;
-//           background-color: black;
-//         }
-//         .imgholder2 {
-//           width: 80%;
-//           height: 20%;
-//           background-color: black;
-//         }
-//         .imgholder3 {
-//           width: 80%;
-//           height: 20%;
-//           background-color: black;
-//         }
-//         .imgholder4 {
-//           width: 80%;
-//           height: 20%;
-//           background-color: black;
-//         }
-//       }
-//     }
-//   }
-// }
+@media (max-width: 500px) {
+  .joinus {
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //  border: 2px solid black;
+    height: 125vh;
+    h1 {
+      font-family: 'Noto Serif', serif;
+      color: grey;
+      font-size: 20px;
+      font-weight: 700;
+      margin-top: 1rem;
+    }
+    h2 {
+      font-family: 'Noto Serif', serif;
+      margin-top: 0.3rem;
+      margin-bottom: 0.3rem;
+      text-align: center;
+      font-size: 25px;
+      font-weight: 100;
+    }
+    .jscards {
+      // border: 2px solid black;
+      height: 95vh;
+      width: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .jscc {
+        // border: 2px solid black;
+        width: 90%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        .imgholder1 {
+          width: 80%;
+          height: 80%;
+          // border: 2px solid black;
+          border-radius: 2rem;
+          background-image: url(../../../assets/contcre.jpg);
+          background-position: center;
+          background-size: cover;
+          // filter: brightness(50%);
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.527),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(../../../assets/contcre.jpg);
+          h2 {
+            color: white;
+            font-size: 20px;
+            margin-top: 45%;
+            margin-left: 5%;
+          }
+        }
+        .imgholder2 {
+          width: 80%;
+          height: 80%;
+          // border: 2px solid black;
+          border-radius: 2rem;
+          background-image: url(../../../assets/instructor.jpg);
+          background-position: center;
+          background-size: cover;
+          // filter: brightness(50%);
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.527),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(../../../assets/instructor.jpg);
+          h2 {
+            color: white;
+            font-size: 25px;
+            margin-top: 45%;
+            margin-left: 5%;
+          }
+        }
+        .imgholder3 {
+          width: 80%;
+          height: 80%;
+          // border: 2px solid black;
+          border-radius: 2rem;
+          background-image: url(../../../assets/campusA.jpg);
+          background-position: center;
+          background-size: cover;
+          // filter: brightness(50%);
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.527),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(../../../assets/campusA.jpg);
+          h2 {
+            color: white;
+            font-size: 25px;
+            margin-top: 45%;
+
+            margin-left: 5%;
+          }
+        }
+        .imgholder4 {
+          width: 80%;
+          height: 80%;
+          // border: 2px solid black;
+          border-radius: 2rem;
+          background-image: url(https://images.unsplash.com/photo-1606761568499-6d2451b23c66?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80);
+          background-position: center;
+          background-size: cover;
+          // filter: brightness(50%);
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.527),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(https://images.unsplash.com/photo-1606761568499-6d2451b23c66?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80);
+          h2 {
+            color: white;
+            font-size: 25px;
+            margin-top: 45%;
+            margin-left: 5%;
+          }
+        }
+      }
+    }
+  }
+}
