--- a/src/compoenents/About/About.scss
+++ b/src/compoenents/About/About.scss
@@ -147,29 +147,44 @@
     font-family: 'Noto Serif', serif;
     font-size: 45px;
     font-weight: 300;
+    padding: 60px 90px 30px 90px;
   }
   background-color: #e7e9f0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 65rem;
+  justify-content: center;
+  // height: 65rem;
+  padding-bottom: 50px;
   .leaders {
     background-color: #e7e9f0;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    // align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
-    height: 60rem;
+    height: 55rem;
     .card {
-      padding: 50px 32px;
+      padding: 30px 32px;
       background: #fff;
       width: 23%;
-      height: 250px;
+      height: 260px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      // align-items: center;
       border-radius: 30px;
       transition: 0.4s;
+      .cent {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        // background-color: red;
+      }
+      .endd {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: end;
+      }
       &:hover {
         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
           rgba(0, 0, 0, 0.22) 0px 10px 10px;
@@ -216,15 +231,15 @@
     background-color: #e7e9f0;
   }
   .leadership {
-    margin-bottom: 245vh;
     background-color: #e7e9f0;
     // display: flex;
     // flex-direction: column;
     // justify-content: space-between;
     h1 {
       font-family: 'Noto Serif', serif;
-      font-size: 23px;
+      font-size: 25px;
       font-weight: 300;
+      padding: 20px 19px 0 19px;
     }
     .leaders {
       background-color: #e7e9f0;
@@ -232,18 +247,24 @@
       align-items: center;
       justify-content: space-evenly;
       flex-wrap: wrap;
-      //   height: 60rem;
+      height: 230rem;
       .card {
         padding: 50px 32px;
         background: #fff;
         width: 90%;
-        height: 250px;
+        height: 295px;
         margin-top: 20px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        // align-items: center;
         border-radius: 30px;
         transition: 0.4s;
+        .endd {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: end;
+        }
         &:hover {
           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
             rgba(0, 0, 0, 0.22) 0px 10px 10px;
