--- a/src/compoenents/Home/Home.scss
+++ b/src/compoenents/Home/Home.scss
@@ -60,3 +60,9 @@ h2 {
 h5 {
   font-family: 'Noto Serif', serif;
 }
+h4 {
+  font-family: 'Noto Serif', serif;
+}
+h6 {
+  font-family: 'Noto Serif', serif;
+}
