--- a/src/compoenents/Programs/Onlinelearn.scss
+++ b/src/compoenents/Programs/Onlinelearn.scss
@@ -19,7 +19,7 @@
   //  background-color: white;
   background-color: #0d101e;
   height: 30vh;
-  padding-top: 130px;
+  padding-top: 170px;
   padding-bottom: 270px;
   .boxholder {
     display: flex;
@@ -27,9 +27,11 @@
     justify-content: space-evenly;
     width: 90%;
     .boxi {
+      padding: 25px;
       border-bottom: 2px solid rgba(0, 151, 251, 0.25);
       border-left: 2px solid rgba(0, 151, 251, 0.25);
       border-right: 2px solid rgba(0, 151, 251, 0.25);
+      border-top: 2px solid rgba(0, 151, 251, 0.25);
       // border: 2px solid rgba(0,151,251,0.25);
       // box-shadow: 0px 4px 20px rgba(0,151,251,0.25);
       width: 23%;
@@ -52,23 +54,11 @@
     font-family: 'Noto-sans';
   }
 
-  .cyan {
-    border-top: 3px solid var(--cyan);
-  }
-  .red {
-    border-top: 3px solid var(--red);
-  }
-  .blue {
-    border-top: 3px solid var(--blue);
-  }
-  .orange {
-    border-top: 3px solid var(--orange);
-  }
-
   h2 {
     color: white;
     font-family: 'Noto-sans';
     font-weight: var(--weight2);
+    font-size: 20px;
   }
 }
 
@@ -81,7 +71,7 @@
     background-color: #0d101e;
     height: 30vh;
     padding-top: 330px;
-    padding-bottom: 530px;
+    padding-bottom: 440px;
     .boxholder {
       display: flex;
       align-items: center;
