--- a/src/compoenents/academics/Academics.scss
+++ b/src/compoenents/academics/Academics.scss
@@ -153,7 +153,7 @@
     .leftside {
       width: 40%;
       background-color: #202330;
-      border: 3px solid #73c4fa;
+      border: 3px solid #000000;
 
       height: 58vh;
       img {
